# alethe-lambdapi

./: .gitignore  README.md  dune-project  reconstruction.opam
assets/: peterson.trace  tlapm_c4a839.trace  tlapm_fc8745.trace
lib/: ast.ml  ast.mli  dune  helper.ml  lexer.mll  parse.ml  parse.mli  parser.mly  trans_smt2.ml  translate.ml
test/: dune
tests/: and_simplify.alethe
